--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,16 @@ body{
   margin: 0;
   padding: 0;
   line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+}
+
+.hero-banner {
+  width: 100%;
+  height: 100%;
+  background-image: image(boots.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 section {
   max-width: 1080px;
@@ -18,11 +28,11 @@ nav {
   padding: 1.25em 0 1.25em 0;
 }
 nav ul {
- list-style-type: none;
- margin: 0;
- padding-left: 0;
- display: flex;
- justify-content: center;
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+  display: flex;
+  justify-content: center;
 }
 nav ul li {
   margin: 0 .5em ;
@@ -36,19 +46,26 @@ nav ul li a:hover {
   text-decoration: underline;
 }
 
-.hero-banner > img{
-  width: 100%;
-  padding-bottom: 1rem;
-}
 
 .about-me {
   display: grid;
-  grid-template-columns:  1fr 1fr 1fr;
+  grid-template-columns:  1fr .5fr 1fr;
   align-items: center;
+  background-color: #F2A172;
+  padding: 0 1em 1em 1em;
 }
 
 .about-me img {
   grid-column: 3;
+  padding: 10px 0 10px 10px;
+}
+
+.text h2 {
+  font-size: 30px;
+}
+
+.text {
+  padding: 0 0 0 10px;
 }
 
 .my-work {
