--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body{
 .hero-banner {
   width: 100%;
   height: 100%;
+  background-color: #fff;
   background-image: image(boots.jpg);
   background-repeat: no-repeat;
   background-position: center;
