--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: #fff;
-  background-image: image(boots.jpg);
+  background-image: url(images/boots.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
